tests/functional/data/transpiler/common/errors/atomic/applied_to_wrong_decl.err
applied_to_wrong_decl.cpp:4:18: error: 'atomic' attribute only applies to expression or compound statement
    4 |             for (@atomic int k = 0; k < 10; ++k) {
      |                  ^
